syntax = "proto3";

package authnz.authz;

import "api/constant/constant.proto";

option go_package = "github.com/xiaohuashifu/him/api/authnz/authz";

// 授权服务
service AuthzService {
    rpc Login(LoginReq) returns (LoginResp);
    rpc SendSmVerCodeForLogin(SendSmVerCodeForLoginReq) returns (SendSmVerCodeForLoginResp);
    rpc UpdatePwd(UpdatePwdReq) returns (UpdatePwdResp);
    rpc Logout(LogoutReq) returns (LogoutResp);
}

// 登录类型
enum LoginType {
    LOGIN_TYPE_UNSPECIFIED = 0; // 未知
    LOGIN_TYPE_SM_VER_CODE = 1; // 短信验证码
    LOGIN_TYPE_PWD = 2; // 密码
}

// 登录请求
message LoginReq {
    constant.Terminal terminal = 1; // 终端
    // 短信验证码内容
    message SmVerCodeContent {
        string phone = 1; // 手机号码
        string sm_ver_code = 2; // 短信验证码
    }
    // 密码内容
    message PwdContent {
        string account = 1; // 账号
        string pwd = 2; // 密码
    }
    oneof content {
        SmVerCodeContent sm_ver_code_content = 2;
        PwdContent pwd_content = 3;
    }
}

// 登录响应
message LoginResp {
    string token = 1; // 凭证
    uint64 user_id = 2; // 用户编号
}

// 发送短信登录验证码请求
message SendSmVerCodeForLoginReq {
    string phone = 1; // 手机号码
    constant.Terminal terminal = 2; // 终端
}

// 发送短信登录验证码响应
message SendSmVerCodeForLoginResp {}

// 更新密码请求
message UpdatePwdReq {
    uint64 user_id = 1; // 用户编号
    string pwd = 2; // 新密码
    string sm_ver_code = 3; // 短信验证码
}

// 更新密码响应
message UpdatePwdResp {}

// 退出登录请求
message LogoutReq {
    string token = 1; // 凭证
}

// 退出登录响应
message LogoutResp {}

// todo 发送验证码前的图形验证码
