syntax = "proto3";

package authnz.authz.mq;

import "api/authnz/authz/authz.proto";
import "api/authnz/authnz.proto";

option go_package = "github.com/xiaohuashifu/him/api/authnz/authz/mq";

// MQ授权组
enum AuthzGroup {
    AUTHZ_GROUP_UNSPECIFIED = 0; // 未知
    AUTHZ_GROUP_PRODUCER = 1; // 生产者
    AUTHZ_GROUP_CONSUMER = 2; // 消费者
}

// MQ授权Tag
enum AuthzTag {
    AUTHZ_TAG_UNSPECIFIED = 0; // 未知
    AUTHZ_TAG_LOGIN_EVENT = 1; // 登录事件
    AUTHZ_TAG_LOGOUT_EVENT = 2; // 退出登录事件
}

// 登录事件
message LoginEvent {
    uint64 user_id = 1;  // 用户编号
    authnz.UserType user_type = 2; // 用户类型
    authnz.authz.LoginType login_type = 3; // 登录类型
    uint64 login_time = 4;  // 登录时间
}

// 退出登录事件
message LogoutEvent {
    uint64 user_id = 1; // 用户编号
    uint64 logout_time = 2; // 退出登录时间
}
