syntax = "proto3";

package authn;

import "api/constant/constant.proto";
import "api/user/user.proto";

option go_package = "github.com/xiaohuashifu/him/api/session";

// 获取会话请求
message GetSessionReq {
    string Token = 1; // 凭证
}

// 获取会话响应
message GetSessionRsp {
    Session Session = 1; // 会话
}

// Session 会话
message Session {
    uint64 UserID = 1; // 用户编号
    user.UserType UserType = 2; // 用户类型
    constant.Terminal Terminal = 3; // 终端
}
